more slide decks for interpreter, and variables

--- a/html/04-git.html
+++ b/html/04-git.html
@@ -77,9 +77,13 @@
                         <li> git pull
                         <li> git push
                         <li> git add &lt;filename&gt;
-                        <li> git commit [-a] -m &lt;message&gt;
+                        <li> git commit [-a] -m "&lt;message&gt;"
                         </code>
                     </ul>
+                </section>
+                <section>
+                    <h2> What's next </h2>
+                    <p><a href="05-interpreter.html">The Interpreter</a>
                 </section>
 			</div>
 		</div>
