more slides: data types, lists, and how to treat traceback messages as friends instead of foes.

--- a/html/05-interpreter.html
+++ b/html/05-interpreter.html
@@ -41,6 +41,18 @@
                     <p> Type along with us as we enter commands.
                 </section>
                 <section>
+                    <h2> File Mode </h2>
+                    <p> The way Python is usually used is to run files.
+                    Python files usually have a <code>.py</code> extension,
+                    like <code>hello_world.py</code>.  We'll start using this
+                    technique shortly.
+
+                    <p> To use Python in this way, type this at your
+                    computer's command prompt:
+
+                    <p><code><pre>python hello_world.py</pre></code>
+                </section>
+                <section>
                     <h2> What's next </h2>
                     <p><a href="06-variables.html">Variables</a>
                 </section>
