--- a/html/07-data-types.html
+++ b/html/07-data-types.html
@@ -132,6 +132,11 @@
                     <p><code><pre>'{} of hearts'.format(2)</pre></code>
                     <p><code><pre>f'{my_int} of hearts'</pre></code>
                 </section>
+                <section>
+                    <h2> What's next </h2>
+                    <p><a href="08-complex-data-types.html">Complex Data
+                    Types</a>
+                </section>
 			</div>
 		</div>
 
