tweaks from maria's feedback.  added to the for-loops slide.

--- a/html/01-introduction.html
+++ b/html/01-introduction.html
@@ -30,10 +30,13 @@
                 </section>
                 <section>
                     <h2> Introducing Ourselves </h2>
-                    <p> Your instructor:
+                    <p> Your co-instructors:
                     <p> Ian Johnston (he/they)
                     <br> Email: ian.johnston@disney.com
                     <br> Slack: @ian.johnston
+                    <p> Maria Mckinley (she/her)
+                    <br> Email: maria.k.mckinley@disney.com
+                    <br> Slack: @maria she/her
                 </section>
                 <section>
                     <h2> What Programming is Good For </h2>
@@ -65,7 +68,7 @@
                     <p><ul>
                     <li> A class for non-programmers
                     <li> Frequent participation/exercises
-                    <li> 3 months to very basic Python proficiency
+                    <li> 3 months to basic Python proficiency
                     <li> Building toward a Blackjack game
                 </section>
                 <section>
