--- a/html/03-editors.html
+++ b/html/03-editors.html
@@ -35,10 +35,9 @@
                         <p> Plain text editors:
                         <ul>
                             <li> Notepad++ (Win)
-                            <li> TextEdit (Mac)
                             <li> Sublime Text
-                            <li> vim
                             <li> EMACS
+                            <li> vim
                         </ul>
                     </section>
                     <section>
@@ -57,6 +56,9 @@
                             <li> Sublime Text
                             <li> Visual Studio Code
                         </ul>
+                        <p> <a
+                        href="https://realpython.com/python-ides-code-editors-guide/">This
+                        guide from RealPython</a> is also good.
                     </section>
                     <section>
                         <h2> What we use </h2>
