--- a/html/05-interpreter.html
+++ b/html/05-interpreter.html
@@ -43,7 +43,7 @@
                 <section>
                     <h2> File Mode </h2>
                     <p> The way Python is usually used is to run files.
-                    Python files usually have a <code>.py</code> extension,
+                    Python files use the <code>.py</code> extension,
                     like <code>hello_world.py</code>.  We'll start using this
                     technique shortly.
 
