--- a/html/06-variables.html
+++ b/html/06-variables.html
@@ -98,7 +98,7 @@ hearts</pre></code>
                     </section>
                 </section>
                 <section>
-                    <h2> Exercise 1 </h2>
+                    <h2> Exercise 6-1 </h2>
                     <ul>
                         <li> Start the interpreter
                         <li> Create a variable called <code>card</code>,
@@ -111,7 +111,7 @@ hearts</pre></code>
                     <p> What happens?  What seems to be the difference?
                 </section>
                 <section>
-                    <h2> Exercise 2 </h2>
+                    <h2> Exercise 6-2 </h2>
                     <p> Using the interpreter:
                     <ul>
                         <li> Create <code>suit</code> pointing to
