--- a/html/07-data-types.html
+++ b/html/07-data-types.html
@@ -68,7 +68,7 @@
                     </section>
                 </section>
                 <section>
-                    <h2> Exercise </h2>
+                    <h2> Exercise 7-1</h2>
                     <p> Perform basic math with ints and floats.
                     <ul>
                         <li> Assign <code>my_int</code> the value
@@ -98,7 +98,7 @@
                     </ul>
                 </section>
                 <section>
-                    <h2> Exercise </h2>
+                    <h2> Exercise 7-2</h2>
                     <ul>
                         <li> Assign <code>my_string</code> the value
                         <code>"hello there"</code>
