added exercise notes, and updated the exercise descriptions in the lists and for loops HTML files.

--- a/html/09-lists.html
+++ b/html/09-lists.html
@@ -81,7 +81,7 @@ sarah</pre></code>
 ['zero', 'one', 'two', 3]</pre></code>
                 </section>
                 <section>
-                    <h2> Excercise 9-1 </h2>
+                    <h3> Exercise 9-1 </h3>
                     <ul>
                         <li> Open a new file called
                         <code>exercise_9_1.py</code>
@@ -98,7 +98,8 @@ name
 name
 name</pre>
                     ...where each <code>name</code> is from your list, in
-                    order.
+                    order.  Check results into git (see detailed exercise
+                    notes).
                 </section>
                 <section>
                     <h2> What's Next </h2>
