--- a/html/11-for-loops.html
+++ b/html/11-for-loops.html
@@ -128,9 +128,11 @@ for num in range(10):
                 </section>
                 <section>
                     <h2> Exercise 11-2 </h2>
-                    <p> In a new file, use an F-string in a list comprehension
-                    to make a new list ranking a list of names from 1 and up,
-                    then print that list.
+                    <p> In a new file, create a list containing names, then
+                    use a list comprehension with an F-string, iterating
+                    over the output of the enumerate() function, to make a
+                    "ranked list" of names, starting at the number 1.  Print
+                    this new list using a for loop.
                     <ul>
                         <li> F-string: <code>f'text {expression}'</code>
                         <li> List comprehension: <code>[item for item in
