adding the gitlab repo URL to the git slide

--- a/html/04-git.html
+++ b/html/04-git.html
@@ -46,7 +46,7 @@
                         <ul>
                             <li> <code>git help</code>
                             <li> <code>cd [appropriate directory]</code>
-                            <li> <code>git clone [some URL]</code>
+                            <li> <code>git clone git@gitlab.disney.com:python_class/beginning_python_jan2020.git</code>
                         </ul>
                         <p> Problems?  Are you on VPN?
                     </section>
