adding new slide decks

--- a/html/11-for-loops.html
+++ b/html/11-for-loops.html
@@ -142,7 +142,7 @@ for num in range(10):
                 </section>
                 <section>
                     <h2> What's Next </h2>
-                    <p> <a href="12-slices.html">Slices</a>
+                    <p> <a href="12-environment.html">Environment Review</a>
                 </section>
 			</div>
 		</div>
