--- a/html/13-slices.html
+++ b/html/13-slices.html
@@ -21,6 +21,7 @@
                     <h2> Slices </h2>
 
                     <p> A slice is a section, or slice, of an iterable object.
+                    So it works on lists, but also on strings.
 
                     <p> The syntax for a slice is this:
 
@@ -33,10 +34,10 @@
                     the existing list.
 
                     <p>The first number is where to <b>start</b> the slice.
-                    Empty means "the beginning".
+                    Empty (<code>[:2]</code>) means "the beginning".
 
                     <p>The second number is where to <b>end</b> the slice.
-                    Empty means "the end".
+                    Empty (<code>[2:]</code>) means "the end".
 
                     <p>Slice numbers point to <b>borders</b> between elements,
                     not the elements themselves.
@@ -56,6 +57,23 @@
 ['d', 'c', 'b', 'a']</pre></code>
                 </section>
                 <section>
+                    <h2> Exercise 13-1 </h2>
+
+                    <ul>
+                    <li> In a new file, make a variable containing the string "Hello world".
+                    <li> Use slice notation to print out the word "Hello".  Do
+                    the same for "world".
+
+                    <li> Use the step function with a -1 to print "Hello world"
+                    backwards.
+
+                    <li> Make a new list containing the letters A through I.
+                    Use slice notation to make a list that contains C through
+                    G inclusive.
+                    </ul>
+                    <p>Slice syntax: <code>iterable[start:stop:step]</code>
+                </section>
+                <section>
                     <h2> Copying a list </h2>
                     <p> Because slices return a new list, they can be used to
                     copy the whole list:
@@ -67,6 +85,19 @@
 ['e', 'b', 'c', 'd']
 >>> my_list
 ['a', 'b', 'c', 'd']</code></pre>
+                </section>
+                <section>
+                    <h2> Exercise 13-2 </h2>
+                    <ul>
+                    <li> Make a list variable that contains the letters A
+                    through G.
+                    <li> Assign that list to a new variable using the equals
+                    sign.
+                    <li> Modify element 3 of that new list to be the letter Z
+                    <li> Print out the original list
+                    <li> Repeat these steps, but make the new list equal to
+                    the old list with <code>[:]</code> after it
+                    <p> What happens?
                 </section>
                 <section>
                     <h2> What's Next </h2>
